# expert_example

./: README.md  pyproject.toml
agents/: refactor-agent.md
expert_example/: __init__.py
python/: README.md
python/expert_example/: __init__.py  __main__.py
rules/: python-style.md
skills/code-review/: SKILL.md  review_checklist.md
typescript/: package.json
typescript/src/: index.ts
